--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="left">
             <!-- <div class="squre"></div> -->
-            <div class="honor"><img src="./奖励证书_img.jpg" alt=""> 奖励证书</div>
+            <div class="honor"><img src="奖励证书_img.jpg" alt=""> 奖励证书</div>
                  <div class="circle"> <span>2010</span></div> 
                  <div class="circle"> <span>2010</span></div>
                  <div class="circle"> <span>2010</span></div>
