--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
     <style>
         body{
-            background-color: rgb(119  , 115, 140);
+            border-radius: 43px;
+            background: linear-gradient(145deg, #ffc3c3, #dea4a4);
+            box-shadow:  41px 41px 82px #634949,
+             -41px -41px 82px #ffffff;
         }
     .outer{
         width: 632px;
